plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.github.node-gradle.node' version '7.0.1'
}

group = 'com.idfc.bootcamp'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.testcontainers:postgresql:1.18.1'
	testImplementation 'org.testcontainers:junit-jupiter:1.15.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
}

tasks.named('test') {
	useJUnitPlatform()
}

node {
	download = true
	version="18.12.1"
	npmVersion="9.2.0"
	workDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp/nodejs")
	npmWorkDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp/npm")
}
task installFEDependencies(type: YarnTask){
	description = " read packge.json and install all jars"
	workingDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp")
	args =["install"]
}
task buildFrontend(type: YarnTask, dependsOn: installFEDependencies){
	description = "Builds applciation for your frontend "
	workingDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp")
	args =["build"]
}

task copyFrontendFiles(type: Copy, dependsOn: [buildFrontend, resolveMainClassName]){
	from "${project.projectDir}/src/main/frontend-ui/bookstoreapp/build/"
	into "${project.projectDir}/build/resources/main/static"
}

bootRun.dependsOn copyFrontendFiles
